2014-12-31         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* First version.